--- a/app/src/main/res/layout/activity_main_house.xml
+++ b/app/src/main/res/layout/activity_main_house.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.awad.adam.housesforrent.MainActivityHouse">
 
-    <Button
-        android:id="@+id/btnRentPartment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/rentApartment"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="64dp" />
-
-    <Button
-        android:id="@+id/btnRentYourHouse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="rent your house "
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="165dp" />
-
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
+</LinearLayout>
