--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.awad.adam.housesforrent.AddItemActivity">
 
     <EditText
@@ -11,9 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="etAmount"
+        android:hint="Amount"
         android:inputType="textPersonName"
-        android:text="etAmount"
         tools:layout_editor_absoluteX="39dp"
         tools:layout_editor_absoluteY="100dp" />
 
@@ -24,7 +24,6 @@
         android:ems="10"
         android:hint="etName"
         android:inputType="textPersonName"
-        android:text="etName"
         tools:layout_editor_absoluteX="39dp"
         tools:layout_editor_absoluteY="16dp" />
 
@@ -35,7 +34,6 @@
         android:ems="10"
         android:hint="etprice"
         android:inputType="textPersonName"
-        android:text="etPrice"
         tools:layout_editor_absoluteX="39dp"
         tools:layout_editor_absoluteY="197dp" />
 
@@ -43,7 +41,7 @@
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="btnSave"
+        android:text="Save"
         tools:layout_editor_absoluteX="66dp"
         tools:layout_editor_absoluteY="286dp" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
